WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300013
Opus and Vorbis webm aren't available in the content process on some platforms
https://bugs.webkit.org/show_bug.cgi?id=300013
Summary
Opus and Vorbis webm aren't available in the content process on some platforms
Jean-Yves Avenard [:jya]
Reported
2025-10-02 01:18:24 PDT
When running in a release build --- /Volumes/Data/worker/macOS-Sonoma-Release-WK2-Tests-EWS/build/layout-test-results/media/media-can-play-webm-expected.txt +++ /Volumes/Data/worker/macOS-Sonoma-Release-WK2-Tests-EWS/build/layout-test-results/media/media-can-play-webm-actual.txt @@ -5,7 +5,7 @@ EXPECTED (video.canPlayType('audio/webm') == 'maybe') OK EXPECTED (video.canPlayType('video/webm') == 'maybe') OK -EXPECTED (video.canPlayType('audio/webm; codecs=vorbis') == 'probably') OK -EXPECTED (video.canPlayType('video/webm; codecs=vp8,vorbis') == 'probably') OK +EXPECTED (video.canPlayType('audio/webm; codecs=vorbis') == 'probably'), OBSERVED '' FAIL +EXPECTED (video.canPlayType('video/webm; codecs=vp8,vorbis') == 'probably'), OBSERVED '' FAIL END OF TEST
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-02 01:18:43 PDT
<
rdar://problem/161800673
>
Jean-Yves Avenard [:jya]
Comment 2
2025-10-02 04:08:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51673
EWS
Comment 3
2025-10-03 08:02:35 PDT
Committed
300939@main
(5e174d0a75e2): <
https://commits.webkit.org/300939@main
> Reviewed commits have been landed. Closing PR #51673 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug