Opus and Vorbis webm aren't available in the content process on some platforms. https://bugs.webkit.org/show_bug.cgi?id=300013 rdar://161800673

Reviewed by Youenn Fablet.

We check the Opus and Vorbis capabilities on creation of the GPU process.
This value is then cached in the UI process and passed on follow-up WebContent
process creation; re-using the infrastucture that used to exist for VP9 and AV1
hardware detection.

We simplify the code and combine all the media codecs information into a single
GPUProcessMediaCodecCapabilities structure.

Added test for opus.
* LayoutTests/media/media-can-play-webm-expected.txt:
* LayoutTests/media/media-can-play-webm.html:
* Source/WebCore/platform/graphics/cocoa/WebMAudioUtilitiesCocoa.h:
* Source/WebCore/platform/graphics/cocoa/WebMAudioUtilitiesCocoa.mm:
(WebCore::setHasOpusDecoder):
(WebCore::setHasVorbisDecoder):
(WebCore::isOpusDecoderAvailable):
(WebCore::isVorbisDecoderAvailable):
* Source/WebKit/CMakeLists.txt:
* Source/WebKit/DerivedSources-input.xcfilelist:
* Source/WebKit/DerivedSources.make:
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::m_sharedPreferencesForWebProcess):
* Source/WebKit/Shared/GPUProcessConnectionParameters.h:
* Source/WebKit/Shared/GPUProcessConnectionParameters.serialization.in:
* Source/WebKit/Shared/GPUProcessMediaCodecCapabilities.h: Copied from Source/WebKit/Shared/GPUProcessConnectionParameters.h.
* Source/WebKit/Shared/GPUProcessMediaCodecCapabilities.serialization.in: Copied from Source/WebKit/WebProcess/GPU/GPUProcessConnectionInfo.serialization.in.
* Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::GPUProcessProxy::createGPUProcessConnection):
(WebKit::GPUProcessProxy::didFinishLaunching):
* Source/WebKit/UIProcess/GPU/GPUProcessProxy.h:
* Source/WebKit/UIProcess/GPU/GPUProcessProxy.messages.in:
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
* Source/WebKit/WebProcess/GPU/GPUProcessConnection.cpp:
(WebKit::GPUProcessConnection::didInitialize):
* Source/WebKit/WebProcess/GPU/GPUProcessConnectionInfo.h:
* Source/WebKit/WebProcess/GPU/GPUProcessConnectionInfo.serialization.in:

Canonical link: https://commits.webkit.org/300939@main