Source/WebCore/platform/graphics/cocoa/WebMAudioUtilitiesCocoa.h
@@ -70,6 +70,13 @@ bool parseOpusTOCData(std::span<const uint8_t> frameData, OpusCookieContents&);
 RefPtr<AudioInfo> createOpusAudioInfo(const OpusCookieContents&);
 Vector<uint8_t> createOpusPrivateData(const AudioStreamBasicDescription&, uint16_t preSkip = 0);
 
+#if ENABLE(OPUS)
+WEBCORE_EXPORT void setHasOpusDecoder(bool);
+#endif
+#if ENABLE(VORBIS)
+WEBCORE_EXPORT void setHasVorbisDecoder(bool);
+#endif
+
 }
 
 #endif // && PLATFORM(COCOA)
